# localchat

./: .gitignore  DESIGN.md  PLANNING.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-027085d860ef4f5b37daef88e141b598dbe83247e2fac7ec9ea647771f14c003.json  query-230266db6f211f61b7895fcb94c8801e10f9b0776cf4e4b7d61118f9a3decef1.json  query-36fe828e8584183031582bceb69874b4be1e59fcd14c9c363143420a42316004.json  query-5978743edae82c21f6492708366a9e822cb74313badab2679c1f25ec81cb92c4.json  query-62ed8c6511f461c392095cf393d36b69fab174d1f1bc379330b01253b0d08bea.json  query-7491f4d9deaba69429b18d028218abea8794fd195c84fa4b2b72cef80ff5782e.json  query-94e271e2f97a9fb2f06f9a3079c6d09d01bcd0956dd6f4fbb081aeb2f4b4283c.json  query-9cc53875a85cf10e7745cb796a902e5055d0a2562a75cd1ebbfdd21a9c557740.json  query-aed958a374af8c80f64052cb98f8e7ed603d21a6e25c57995427e0f046c12360.json  query-b13c80b3ad7009eb48ca2f77ea39d734995b452ceca5585f6cc1138dde5a47e4.json  query-c489be15130c736330bb17284941701257d36d40d01e485062928230d9519aa2.json  query-c8a37304b2b8557eee4ffa71706b3a577302ca78be428c51461c0ca7df443e6c.json  query-cbd239453f7168273e59d38db24d1cb319ef9c9c39df4e34089b427032539550.json  query-d617dba525aa49328ea000d8d0d739dadfe69d1b87bf679e6c5d0d7bff582045.json  query-e63a03f40e816949e9151ee5ce88696b4e265c4fd52710996f8b1ef6535a1fec.json  query-f161dcb90d1a2572c8f0d27483edfff8df0cb7fd2406af5b66653ed0f904634a.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
src/components/: MermaidDiagram.tsx  StreamingMarkdownRenderer.tsx
src/components/ui/: scroll-area.tsx  textarea.tsx
