[package]
name = "localchat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Remove incorrect feature from core tauri dependency
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Added dependencies
tokio = { version = "1", features = ["full"] } # Async runtime
reqwest = { version = "0.12", features = ["json", "stream"] } # HTTP client
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "chrono", "json" ] } # Async SQL toolkit
anyhow = "1" # Error handling
uuid = { version = "1", features = ["v4", "serde"] } # UUID generation
chrono = { version = "0.4", features = ["serde"] } # Timestamps
async-trait = "0.1" # For async traits
keyring = "3" # Secure credential storage
log = "0.4" # Logging facade
env_logger = "0.11" # Logging implementation
futures = "0.3" # Added for stream utilities
# async-stream = "0.3" # Optional helper for creating streams
eventsource-stream = "^0.2" # For parsing SSE (Corrected version)
dashmap = "5.5.3" # Added dashmap dependency

# tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

# Tauri Plugins
tauri-plugin-clipboard-manager = "2.0.0-beta" # Add clipboard plugin
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

